--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1089,8 +1089,7 @@ audio {
 
 .balloons {
 	position: fixed;
-	bottom: 0px;
-	left: -100;
+	bottom: 200px;
 	opacity: 0.6;
 	z-index: 99;
 	width: 80px;
@@ -1404,7 +1403,10 @@ audio {
 
     /*controlling tablet width*/
     /*@media only screen and (max-width: 720px){
-    	.container {
+    	.body {
+    		-webkit-transform: scale(0.9);
+    	}
+	.container {
     		-webkit-transform: scale(0.9);
     	}
     }*/
