--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1089,7 +1089,7 @@ audio {
 
 .balloons {
 	position: fixed;
-	bottom: 200px;
+	bottom: -200px;
 	opacity: 0.6;
 	z-index: 99;
 	width: 80px;
@@ -1403,7 +1403,7 @@ audio {
 
     /*controlling tablet width*/
     /*@media only screen and (max-width: 720px){
-    	.body {
+    	.badan {
     		-webkit-transform: scale(0.9);
     	}
 	.container {
